--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "url": "https://github.com/PrivateSky/menu-wallet/issues"
   },
   "dependencies": {
-    "updater": "git+https://github.com/PrivateSky/updater.git"
+    "octopus": "git+https://github.com/PrivateSky/updater.git"
   },
   "scripts": {
-    "postinstall": "node ./bin/install.js",
+    "postinstall": "node ./node_modules/octopus/scripts/install",
     "build": "node ./bin/build.js"
   },
   "homepage": "https://github.com/PrivateSky/menu-wallet#readme"
