--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "postinstall": "node ./node_modules/octopus/scripts/install",
+    "prebuild": "node ./node_modules/octopus/scripts/install ./bin/prebuild_octopus.json",
     "build": "node ./bin/build.js"
   },
   "homepage": "https://github.com/PrivateSky/menu-wallet#readme"
