--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/PrivateSky/menu-wallet/issues"
   },
   "dependencies": {
-    "octopus": "git+https://github.com/PrivateSky/updater.git"
+    "octopus": "git+https://github.com/PrivateSky/octopus.git"
   },
   "scripts": {
     "postinstall": "node ./node_modules/octopus/scripts/install",
