--- a/code/app-config.json
+++ b/code/app-config.json
@@ -1,7 +1,7 @@
 {
   "theme":"default",
   "appVersion":"1.0.1",
-  "basePagesUrl": "/pages",
+  "basePagesUrl": "/pages/",
   "profile": {
     "username": "Secure Channels",
     "email": "sinica@axiologic.net",
@@ -25,10 +25,6 @@
       },
       {
         "name": "Profile"
-      },
-      {
-        "name": "Not found",
-        "path": "/404"
       }
     ]
   }
